# EmbreeRayTracer

./: .gitmodules  CMakeLists.txt  README.md  clean.sh  configure.sh  debugBuild.sh  debugClean.sh  debugRun.sh  embreeTest.cpp  run.sh
Model/: cornell_box.mtl
embree-4.2.0/lib/: libintlc.so.5
include/: Camera.hpp  EmbreeScene.hpp  Geometry.hpp  Material.hpp  OBJ_Loader_embree.hpp  Object.hpp  Scene.hpp  Triangle.hpp  Vec.hpp  common.hpp
src/: Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Ray.hpp  Scene.cpp  Scene.hpp  Vec.hpp  Vector.hpp  embreeTest.cpp
